Added the ability to specify components by pointing to the components.xml file inside the local properties. This will make it possible to start a component from the target/classes
git-svn-id: https://source.sakaiproject.org/contrib/k2/trunk@57073 fdecad78-55fc-0310-b1b2-d7d25cf747c9